Social links filled, Form - sends to form dump, layout fixed for all break points, Logo position fixed, Nav items vertical align fixed, HTML and CSS cleared WC3 testing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,12 +65,12 @@ header {
     font-size: 16px;
 }
 
-/* .menuitem {
-    height: 20px;
-    width: 75px;
-    text-align: center;
-    padding: 0;
-} */
+.menuitem {
+    height: 75px;
+    /* width: 75px; */
+    /* text-align: center; */
+    padding-top: 20px;
+}
 
 /* can i move these rules to .nav? */
 .menuitem a {
